# Sales-call-prep-assistant

./: .coderabbit.yaml  .env.example  CLAUDE.md  ERROR_HANDLING.md  GEMINI.md  README.md  TESTING_SUMMARY.md
backend/: pyproject.toml  requirements.txt
backend/src/: config.py  dependencies.py  main.py  supabase_client.py
backend/src/agents/: __init__.py
backend/src/agents/research_orchestrator/: __init__.py  agent.py
backend/src/agents/research_orchestrator/tools/: __init__.py  get_company_linkedin.py  scrape_linkedin_posts.py  scrape_website.py  search_linkedin_profile.py  web_search.py
backend/src/agents/sales_synthesizer/: __init__.py  agent.py
backend/src/agents/sales_synthesizer/tools/: __init__.py  search_portfolio.py
backend/src/prompts/: prep_report_prompt.md
backend/src/routers/: dashboard.py  prep.py  profile.py
backend/src/schemas/: __init__.py  meeting_outcome.py  prep_report.py  user_profile.py
backend/src/services/: apify_service.py  cache_service.py  firecrawl_service.py  search_service.py  supabase_service.py
backend/src/tools/: firecrawl_scrape.py  gemini_agent.py  serpapi_search.py
backend/src/utils/: logger.py  normalise.py  prompt_loader.py  retry.py
backend/supabase/migrations/: 0001_tables.sql  0002_rls.sql  0003_add_contact_fields.sql  0004_add_min_portfolio_items_constraint.sql  0005_add_portfolio_min_constraint.sql  0006_add_updated_at_trigger.sql  0010_dashboard_performance_indexes.sql  0011_dashboard_aggregated_v2.sql
backend/tests/: README.md  conftest.py  test_meeting_outcome.py
backend/tests/routers/: test_prep_helpers.py  test_profile.py
backend/tests/schemas/: test_prep_report.py  test_user_profile.py
backend/tests/services/: test_cache_service.py  test_firecrawl_service.py  test_search_service.py
backend/tests/utils/: test_logger.py
docs/: CodeRabbit-Integration-Guide.md  PRD.md  PRD2.md  (+2 more)
(+31 files in other folders)
