[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.1",
    "gotrue>=2.12.4",
    "pydantic-ai>=1.7.0",
    "pydantic-settings>=2.11.0",
    "supabase>=2.22.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
